tests/static/pass/inline/4-a.c
extern int f(void) { return 0; };

int main(void) {
      return f();
}
