tests/static/fail/ext-uses/4.0.c
extern int link_error(void);

int main(void) {
      return 1 || link_error();
}
